--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <title>Steganography Online</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <title>My Steganography</title>
+  <link rel="stylesheet" href="style.scss">
 </head>
 <body>
-  <div class="container">
+  <div class="stego-wrapper">
     <div class="page-header">
       <h1>Steganography Online</h1>
     </div>
@@ -92,19 +92,11 @@
 
     </div>
 
-    <footer style="text-align: center; margin-top: 20px; margin-bottom: 10px;">
-      &copy; 2014 by <a href="mailto:stylesuxx@gmail.com">stylesuxx</a>
+    <footer>
+      &copy; 2024 by IndyBoss
     </footer>
   </div>
-
-  <style>
-    canvas {
-      max-width: 100%;
-    }
-  </style>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <script type="text/JavaScript" src="script.js"></script>
 </body>
 </html>
